--- a/package.json
+++ b/package.json
@@ -1,1 +1,40 @@
-{}
+{
+  "name": "@nichoth/template-ts",
+  "type": "module",
+  "description": "A template for typescript *dependency* modules.",
+  "version": "0.0.0",
+  "main": "src/index.ts",
+  "scripts": {
+    "lint": "standardx -v \"./**/*.ts\"",
+    "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
+    "test": "npm run lint && npm run build-tests && cat test/index.html | tape-run --input=html --static=test | tap-arc",
+    "build-mjs": "esbuild src/index.ts src/util.ts --bundle --format=esm --keep-names --outdir=./dist --out-extension:.js=.mjs",
+    "build-js": "esbuild src/index.ts src/util.ts --bundle --format=cjs --keep-names --outdir=./dist --out-extension:.js=.cjs",
+    "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-js && npm run build-mjs",
+    "preversion": "npm run lint",
+    "postversion": "git push && git push --tags && npm publish",
+    "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.55.0",
+    "esbuild": "^0.15.18",
+    "standardx": "^7.0.0",
+    "tap-arc": "^0.3.5",
+    "tape-run": "^10.0.0",
+    "tapzero": "^0.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nichoth/template-ts.git"
+  },
+  "keywords": [
+    "template",
+    "typescript"
+  ],
+  "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
+  "license": "AGPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/nichoth/template-ts/issues"
+  },
+  "homepage": "https://github.com/nichoth/template-ts#readme"
+}
