--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "standardx -v \"./**/*.ts\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build-tests && cat test/index.html | tape-run --input=html --static=test | tap-arc",
-    "build-mjs": "esbuild src/index.ts --bundle --format=esm --keep-names --outdir=./dist --out-extension:.js=.mjs",
-    "build-js": "esbuild src/index.ts --bundle --format=cjs --keep-names --outdir=./dist --out-extension:.js=.cjs",
+    "build-mjs": "esbuild src/index.ts --format=esm --keep-names --outdir=./dist --out-extension:.js=.mjs",
+    "build-js": "esbuild src/index.ts --format=cjs --keep-names --outdir=./dist --out-extension:.js=.cjs",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-js && npm run build-mjs",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags && npm publish",
