--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "lint": "standardx -v \"./**/*.ts\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build-tests && cat test/index.html | tape-run --input=html --static=test | tap-arc",
-    "build-mjs": "esbuild src/index.ts --format=esm --keep-names --outdir=./dist --out-extension:.js=.mjs",
-    "build-js": "esbuild src/index.ts --format=cjs --keep-names --outdir=./dist --out-extension:.js=.cjs",
-    "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-js && npm run build-mjs",
+    "build-cjs": "esbuild src/*.ts --format=cjs --keep-names --outdir=./dist --out-extension:.js=.cjs",
+    "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && tsc",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags && npm publish",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build && tsc"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^5.55.0",
@@ -21,7 +20,8 @@
     "standardx": "^7.0.0",
     "tap-arc": "^0.3.5",
     "tape-run": "^10.0.0",
-    "tapzero": "^0.6.1"
+    "tapzero": "^0.6.1",
+    "typescript": "^5.0.2"
   },
   "exports": {
     ".": {
@@ -30,7 +30,7 @@
     },
     "./*": {
       "import": [
-        "./dist/*.mjs",
+        "./dist/*.js",
         "./dist/*"
       ],
       "require": [
