rm redundant script

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,6 @@
     "no-undef": "off",
     "indent": [ "error", 4 ],
     "comma-dangle": "off",
-    "no-multi-spaces": ["error", { "ignoreEOLComments": true }],
-    "@typescript-eslint/no-floating-promises": "error"
+    "no-multi-spaces": ["error", { "ignoreEOLComments": true }]
   }
 }
