--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "type": "module",
-  "description": "A template for typescript dependency modules that run in a browser.",
   "version": "0.0.0",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "standardx -v \"./**/*.ts\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
@@ -38,10 +37,6 @@
       ]
     }
   },
-  "keywords": [
-    "template",
-    "typescript"
-  ],
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
   "license": "AGPL-3.0-or-later"
 }
