--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,4 +25,5 @@ jobs:
           CI: true
       - name: Run tests
         run: |
-          xvfb-run --server-args="-screen 0 1920x1080x24" npm test
+          npm run build-tests
+          xvfb-run --server-args="-screen 0 1920x1080x24" npm run test-tape-run
