--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,4 +26,6 @@ jobs:
       - name: Run tests
         run: |
           npm run build-tests
+      - name: Run tap tests
+        run: |
           xvfb-run --server-args="-screen 0 1920x1080x24" npm run test-tape-run
