--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,9 +23,9 @@ jobs:
           npm run lint
         env:
           CI: true
-      - name: Run tests
+      - name: Build tests
         run: |
           npm run build-tests
-      - name: Run tap tests
+      - name: Run tests
         run: |
           xvfb-run --server-args="-screen 0 1920x1080x24" npm run test-tape-run
