--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm run build-tests
       - name: install xvfb
-        run: sudo apt-get install xvfb
+        run: sudo apt-get install xvfb firefox
       - name: Run tests
         run: |
           xvfb-run --auto-servernum npm run test-tape-run
