--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Build tests
         run: |
           npm run build-tests
-      # - name: install xvfb
-      #   run: sudo apt-get install xvfb firefox
+      - name: install xvfb
+        run: sudo apt-get install xvfb firefox
       - name: Run tests
         run: |
-          npm run test-tape-run
+          xvfb-run --auto-servernum npm run test-tape-run
