--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 3
+    timeout-minutes: 5
 
     strategy:
       matrix:
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm run build-tests
       - name: install xvfb
-        run: sudo apt-get install xvfb firefox
+        run: sudo apt-get install xvfb
       - name: Run tests
         run: |
           xvfb-run --auto-servernum npm run test-tape-run
