--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,11 @@
-name: tests
-run-name: testing in node
+name: Node CI
+
 on: [push]
+
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  build:
+
+    runs-on: ubuntu-20.04
     timeout-minutes: 5
 
     strategy:
@@ -11,23 +13,19 @@ jobs:
         node-version: [18.x]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm install, build
-        run: |
-          npm install
-          npm run build --if-present
-          npm run lint
-        env:
-          CI: true
-      - name: Build tests
-        run: |
-          npm run build-tests
-      - name: install xvfb
-        run: sudo apt-get install xvfb
-      - name: Run tests
-        run: |
-          xvfb-run --auto-servernum npm run test-tape-run
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build
+      run: |
+        npm install
+        npm run build --if-present
+        npm run lint
+      env:
+        CI: true
+    - name: Run tape tests
+      run: |
+        npm run build-tests
+        xvfb-run --server-args="-screen 0 1920x1080x24" npm run test-tape-run
