--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "postversion": "git push && git push --tags && npm publish",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {},
   "devDependencies": {
+    "@socketsupply/tapzero": "^0.7.1",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
     "standardx": "^7.0.0",
     "tap-arc": "^0.3.5",
     "tape-run": "^10.0.0",
-    "tapzero": "^0.6.1",
     "typescript": "^5.0.2"
   },
   "exports": {
