--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,9 @@
     "declarationDir": "dist",
     "declarationMap": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*",
+    "test",
+    "lib.es5.d.ts"
+  ]
 }
