add vite and example dir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "listFiles": true,
     "module": "ES2022",
     "target": "ES2022",
-    "moduleResolution": "Node",
+    "moduleResolution": "nodenext",
     "esModuleInterop": false,
-    "lib": ["ES2021", "DOM", "WebWorker"],
+    "lib": ["ES2022", "DOM", "WebWorker"],
     "allowJs": false,
     "skipLibCheck": true,
     "outDir": "dist",
@@ -17,15 +17,15 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "noImplicitAny": false,
     "declaration": true,
     "declarationDir": "dist",
     "declarationMap": true
   },
   "include": [
+    "example",
     "src/**/*",
     "test",
     "lib.es5.d.ts"
