--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
     "build-cjs": "esbuild src/*.ts --format=cjs --tsconfig=tsconfig.build.json --keep-names --outdir=./dist --out-extension:.js=.cjs",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && tsc --project tsconfig.build.json",
+    "start": "vite",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags && npm publish",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.5.0",
     "@socketsupply/tapzero": "^0.7.1",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
+    "postcss-nesting": "^12.0.1",
+    "preact": "^10.17.1",
     "standardx": "^7.0.0",
     "tap-arc": "^0.3.5",
     "tape-run": "^10.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.9"
   },
   "exports": {
     ".": {
