--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "listFiles": true,
-    "module": "ES2022",
+    "module": "NodeNext",
     "target": "ES2022",
     "moduleResolution": "nodenext",
     "esModuleInterop": false,
