--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postversion": "git push && git push --tags && npm publish",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+  },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
     "@socketsupply/tapzero": "^0.7.1",
