--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,17 @@
     }
   },
   "rules": {
+    "operator-linebreak": ["off"],
+    "react/jsx-wrap-multilines": ["error", { "declaration": "parens" }],
+    "react/jsx-first-prop-new-line": ["off"],
+    "react/jsx-indent-props": "off",
+    "react/jsx-closing-tag-location": ["off"],
+    "react/jsx-indent": ["error", 4],
+    "react/jsx-closing-bracket-location": ["off"],
+    "react/jsx-curly-newline": ["off"],
+    "react/jsx-boolean-value": ["off"],
+    "jsx-quotes": ["error", "prefer-double"],
+    "multiline-ternary": "off",
     "no-multiple-empty-lines": [
       "error",
       {
