--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
-    "@socketsupply/tapzero": "^0.7.1",
+    "@nichoth/tapzero": "^0.8.0",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
     "postcss-nesting": "^12.0.1",
