--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "postversion": "git push && git push --tags && npm publish",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {
-  },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
+    "@nichoth/debug": "^0.2.2",
     "@nichoth/tapzero": "^0.8.0",
+    "@preact/preset-vite": "^2.5.0",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
     "postcss-nesting": "^12.0.1",
