--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {},
   "devDependencies": {
     "@nichoth/debug": "^0.2.5",
     "@nichoth/tapzero": "^0.8.4",
