fix pkg scripts

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && tsc --project tsconfig.build.json",
     "start": "vite",
     "preversion": "npm run lint",
-    "version": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md",
-    "postversion": "git push --follow-tags && npm publish",
+    "changelog": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md && git commit -m 'changelog'",
+    "postversion": "npm run changelog && git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {},
