fix license in package.json

--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
     }
   },
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
-  "license": "AGPL-3.0-or-later"
+  "license": "MIT"
 }
