--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "@nichoth/debug": "^0.6.1",
-    "@nichoth/tapzero": "^0.8.4",
+    "@bicycle-codes/tapzero": "^0.8.10",
     "@preact/preset-vite": "^2.8.1",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.1.0",
