--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
     "build-cjs": "esbuild src/*.ts --format=cjs --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --out-extension:.js=.cjs --sourcemap=inline",
-    "build-esm": "esbuild src/*.ts --format=esm --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --sourcemap=inline",
+    "build-esm": "tsc --project tsconfig.build.json",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && npm run build-esm",
     "start": "vite",
     "preversion": "npm run lint",
