--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint \"./**/*.{ts,js}\"",
     "build-tests": "esbuild test/index.ts --target=es2020 --bundle --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
-    "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
+    "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-spec",
     "build-cjs": "esbuild src/*.ts --format=cjs --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --out-extension:.js=.cjs --sourcemap=inline",
     "build-esm": "tsc --project tsconfig.build.json",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && npm run build-esm",
@@ -20,20 +20,19 @@
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@nichoth/debug": "^0.6.7",
     "@bicycle-codes/tapzero": "^0.9.2",
+    "@nichoth/debug": "^0.6.7",
     "@preact/preset-vite": "^2.8.2",
-    "@typescript-eslint/parser": "^7.6.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "auto-changelog": "^2.4.0",
     "esbuild": "^0.20.2",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "postcss-nesting": "^12.1.1",
     "preact": "^10.20.2",
-    "tap-arc": "^1.2.2",
+    "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
     "typescript": "^5.4.4",
     "vite": "^5.1.6"
