--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
     "typescript": "^5.4.4",
-    "vite": "^5.1.6"
+    "vite": "^5.2.10"
   },
   "exports": {
     ".": {
@@ -54,5 +54,8 @@
     }
   },
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "htm": "^3.1.1"
+  }
 }
