--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-spec",
     "build-cjs": "esbuild src/*.ts --format=cjs --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --out-extension:.js=.cjs --sourcemap=inline",
     "build-esm": "tsc --project tsconfig.build.json",
+    "build-example": "mkdir -p ./public && rm -rf ./public/* && vite build --base=./",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && npm run build-esm",
     "start": "vite",
     "preversion": "npm run lint",
     "version": "auto-changelog -p --template keepachangelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md",
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
+  },
+  "dependencies": {
   },
   "devDependencies": {
     "@bicycle-codes/tapzero": "^0.9.2",
@@ -54,7 +57,5 @@
     }
   },
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
-  "license": "MIT",
-  "dependencies": {
-  }
+  "license": "MIT"
 }
