--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@bicycle-codes/tapzero": "^0.9.2",
     "@nichoth/debug": "^0.6.7",
@@ -33,10 +31,12 @@
     "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
+    "htm": "^3.1.1",
     "postcss-nesting": "^12.1.1",
     "preact": "^10.20.2",
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
+    "typedoc": "^0.25.13",
     "typescript": "^5.4.4",
     "vite": "^5.2.10"
   },
