--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,14 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_|__",
+        "varsIgnorePattern": "_|__",
+        "caughtErrorsIgnorePattern": "_|__"
+      }
+    ],
     "operator-linebreak": ["off"],
     "multiline-ternary": "off",
     "no-multiple-empty-lines": [
