--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {},
   "devDependencies": {
     "@bicycle-codes/tapzero": "^0.9.2",
-    "@nichoth/debug": "^0.6.7",
+    "@bicycle-codes/debug": "^0.6.8",
     "@preact/preset-vite": "^2.8.2",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
