--- a/package.json
+++ b/package.json
@@ -58,6 +58,6 @@
       ]
     }
   },
-  "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
+  "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)",
   "license": "MIT"
 }
