--- a/.eslintrc
+++ b/.eslintrc
@@ -16,9 +16,9 @@
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
-        "argsIgnorePattern": "_|__",
-        "varsIgnorePattern": "_|__",
-        "caughtErrorsIgnorePattern": "_|__"
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
       }
     ],
     "operator-linebreak": ["off"],
