add dom.iterable to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ES2022",
     "moduleResolution": "Bundler",
     "esModuleInterop": false,
-    "lib": ["ES2022", "DOM", "WebWorker"],
+    "lib": ["ES2022", "DOM", "WebWorker", "dom.iterable"],
     "allowJs": false,
     "skipLibCheck": true,
     "outDir": "dist",
