--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
+    "./css": "./dist/style.css",
+    "./css/min": "./dist/style.min.css",
     "./*": {
       "import": [
         "./dist/*.js",
