--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-example": "mkdir -p ./public && rm -rf ./public/* && VITE_DEBUG_MODE=staging vite --mode staging --base=\"/repo-name\" build",
     "build-docs": "typedoc --tsconfig tsconfig.build.json ./src/index.ts",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-cjs && npm run build-esm && npm run build-esm:min && npm run build-css && npm run build-css:min",
-    "cli": "esbuild ./bin/cli.ts > ./bin/cli.js && node ./bin/cli.js hello --foo bar",
+    "build-cli": "esbuild ./bin/cli.ts > ./bin/cli.js",
     "start": "vite",
     "toc": "markdown-toc --maxdepth 3 -i README.md",
     "preversion": "npm run lint && stylelint src/*.css",
