--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-expressions": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/consistent-type-imports": [
       "error",
